新增修改订单完成

--- a/app/src/main/res/layout/activity_car_add_modify.xml
+++ b/app/src/main/res/layout/activity_car_add_modify.xml
@@ -12,13 +12,14 @@
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_weight="1"
-        android:layout_height="0dp">
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -26,6 +27,7 @@
                 android:text="请确认承运人信息，订单完成后，实际运费将会转入承运人手机对应账户"
                 android:textColor="@color/color_of_fa8c16"
                 android:textSize="14dp" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -34,13 +36,14 @@
                 android:text="行驶证主页"
                 android:textColor="@color/color_of_666666"
                 android:textSize="14dp" />
+
             <com.hongniu.freight.widget.ImageInforView
-                android:layout_width="match_parent"
                 android:id="@+id/img_positive"
-                android:layout_marginTop="10dp"
+                android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:layout_marginLeft="@dimen/gap_app"
-                android:layout_marginRight="@dimen/gap_app"/>
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="@dimen/gap_app" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -50,13 +53,14 @@
                 android:text="行驶证副业"
                 android:textColor="@color/color_of_666666"
                 android:textSize="14dp" />
+
             <com.hongniu.freight.widget.ImageInforView
-                android:layout_width="match_parent"
                 android:id="@+id/img_minus"
-                android:layout_marginTop="10dp"
+                android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:layout_marginLeft="@dimen/gap_app"
-                android:layout_marginRight="@dimen/gap_app"/>
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="@dimen/gap_app" />
 
             <com.fy.companylibrary.widget.ItemTextView
                 android:id="@+id/item_car_type"
@@ -77,6 +81,12 @@
                 app:textleft="车牌号码" />
 
             <com.fy.companylibrary.widget.ItemTextView
+                android:id="@+id/item_car_number_color"
+                style="@style/item_text"
+                app:textcenterhide="请输入车牌颜色"
+                app:textleft="车牌颜色" />
+
+            <com.fy.companylibrary.widget.ItemTextView
                 android:id="@+id/item_car_name"
                 style="@style/item_edit"
                 app:textcenterhide="请输入承运人姓名"
@@ -93,9 +103,8 @@
 
     </androidx.core.widget.NestedScrollView>
 
-<TextView
-    android:id="@+id/bt_sum"
-    android:text="保存"
-    style="@style/bt_red"
-    />
+    <TextView
+        android:id="@+id/bt_sum"
+        style="@style/bt_red"
+        android:text="保存" />
 </LinearLayout>
