--- a/app/src/main/res/layout/fragment_attestation_carrier_company.xml
+++ b/app/src/main/res/layout/fragment_attestation_carrier_company.xml
@@ -57,6 +57,13 @@
                 app:textcenterhide="请输入联系人邮箱"
                 app:textleft="联系人邮箱" />
 
+            <com.fy.companylibrary.widget.ItemTextView
+                android:id="@+id/item_road_transport_permit"
+                style="@style/item_edit"
+                app:centerType="normal"
+                app:textcenterhide="请输入道路运输许可证编号"
+                app:textleft="道路运输许可证编号" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -93,7 +100,7 @@
                 android:layout_marginLeft="@dimen/gap_app"
                 android:layout_marginRight="@dimen/gap_app" />
 
-            <include layout="@layout/layout_id_card"/>
+            <include layout="@layout/layout_id_card" />
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
