--- a/app/src/main/res/layout/fragment_attestation_carrier_personal.xml
+++ b/app/src/main/res/layout/fragment_attestation_carrier_personal.xml
@@ -5,37 +5,44 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_of_ffffff"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_weight="1"
-        android:layout_height="0dp">
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
             <com.fy.companylibrary.widget.ItemTextView
-                style="@style/item_edit"
                 android:id="@+id/item_name"
+                style="@style/item_edit"
                 app:textcenterhide="请输入姓名"
                 app:textleft="姓名" />
 
             <com.fy.companylibrary.widget.ItemTextView
+                android:id="@+id/item_id_card"
                 style="@style/item_edit"
                 app:centerType="idcard"
-                android:id="@+id/item_id_card"
                 app:textcenterhide="请输入身份证号码"
                 app:textleft="身份证号码" />
 
             <com.fy.companylibrary.widget.ItemTextView
-                style="@style/item_edit"
                 android:id="@+id/item_email"
+                style="@style/item_edit"
                 app:centerType="normal"
                 app:textcenterhide="请输入邮箱"
                 app:textleft="邮箱" />
+
+            <com.fy.companylibrary.widget.ItemTextView
+                android:id="@+id/item_road_transport_permit"
+                style="@style/item_edit"
+                app:centerType="normal"
+                app:textcenterhide="请输入道路运输许可证编号"
+                app:textleft="道路运输许可证编号" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -46,12 +53,13 @@
                 android:text="道路运输许可证"
                 android:textColor="@color/color_of_666666"
                 android:textSize="14dp" />
+
             <com.hongniu.freight.widget.ImageInforView
                 android:id="@+id/img_driver"
                 android:layout_width="match_parent"
                 android:layout_height="160dp"
                 android:layout_marginLeft="@dimen/gap_app"
-                android:layout_marginRight="@dimen/gap_app"/>
+                android:layout_marginRight="@dimen/gap_app" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -62,19 +70,22 @@
                 android:text="挂靠协议"
                 android:textColor="@color/color_of_666666"
                 android:textSize="14dp" />
+
             <com.hongniu.freight.widget.ImageInforView
                 android:id="@+id/img_qualification"
                 android:layout_width="match_parent"
                 android:layout_height="160dp"
                 android:layout_marginLeft="@dimen/gap_app"
-                android:layout_marginRight="@dimen/gap_app"/>
-            <include layout="@layout/layout_id_card"/>
+                android:layout_marginRight="@dimen/gap_app" />
+
+            <include layout="@layout/layout_id_card" />
 
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
+
     <TextView
-        android:text="下一步"
         android:id="@+id/bt_sum"
-        style="@style/bt_red"/>
+        style="@style/bt_red"
+        android:text="下一步" />
 </LinearLayout>
