更改启动页图标

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -8,25 +8,43 @@
     tools:context=".ui.SplashActivity">
 
     <ImageView
-        android:layout_width="31dp"
         android:id="@+id/img"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.3"
+        android:layout_width="31dp"
+        android:layout_height="365dp"
         android:src="@mipmap/img_title"
-        android:layout_height="365dp"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.3" />
+
+
 
     <ImageView
+        android:id="@+id/icon"
+        android:layout_width="35dp"
+        android:layout_height="41dp"
+        android:layout_marginBottom="35dp"
+        android:src="@mipmap/ic_launcher"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/tv"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/img"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="1" />
+
+    <TextView
+        android:id="@+id/tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/app_name"
+        android:textColor="@color/color_of_999999"
+        android:textSize="23dp"
+        android:layout_marginLeft="10dp"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="35dp"
-        app:layout_constraintVertical_bias="1"
-        android:layout_width="170dp"
-        android:src="@mipmap/logo_qdy"
-        android:layout_height="41dp"/>
+        app:layout_constraintBottom_toBottomOf="@id/icon"
+        app:layout_constraintStart_toEndOf="@id/icon"
+        app:layout_constraintTop_toTopOf="@id/icon" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
