隐藏第三步

--- a/app/src/main/res/layout/activity_attestation_role_activity.xml
+++ b/app/src/main/res/layout/activity_attestation_role_activity.xml
@@ -26,16 +26,6 @@
             app:layout_constraintStart_toStartOf="@id/tv_index_1"
             app:layout_constraintTop_toTopOf="@id/tv_index_1" />
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="2dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:background="@color/color_of_cccccc"
-            app:layout_constraintBottom_toBottomOf="@id/tv_index_1"
-            app:layout_constraintEnd_toEndOf="@id/tv_index_3"
-            app:layout_constraintStart_toStartOf="@id/tv_index_2"
-            app:layout_constraintTop_toTopOf="@id/tv_index_1" />
 
         <TextView
             android:id="@+id/tv_index_1"
@@ -65,19 +55,6 @@
             app:layout_constraintStart_toStartOf="@id/tv2"
             app:layout_constraintTop_toTopOf="@id/tv_index_1" />
 
-        <TextView
-            android:id="@+id/tv_index_3"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:background="@drawable/ovl_50_cccccc"
-            android:gravity="center"
-            android:text="3"
-            android:textColor="@color/color_of_ffffff"
-            android:textSize="13dp"
-            app:layout_constraintBottom_toBottomOf="@id/tv_index_1"
-            app:layout_constraintEnd_toEndOf="@id/tv3"
-            app:layout_constraintStart_toStartOf="@id/tv3"
-            app:layout_constraintTop_toTopOf="@id/tv_index_1" />
 
         <TextView
             android:id="@+id/tv1"
@@ -105,17 +82,43 @@
             app:layout_constraintTop_toTopOf="@id/tv1" />
 
         <TextView
+            android:id="@+id/tv_index_3"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:background="@drawable/ovl_50_cccccc"
+            android:gravity="center"
+            android:text="3"
+            android:textColor="@color/color_of_ffffff"
+            android:textSize="13dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@id/tv_index_1"
+            app:layout_constraintEnd_toEndOf="@id/tv3"
+            app:layout_constraintStart_toStartOf="@id/tv3"
+            app:layout_constraintTop_toTopOf="@id/tv_index_1" />
+
+        <TextView
             android:id="@+id/tv3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="人脸识别"
             android:textColor="@color/color_of_999999"
             android:textSize="13dp"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@id/tv1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/tv2"
             app:layout_constraintTop_toTopOf="@id/tv1" />
-
+        <View
+            android:layout_width="0dp"
+            android:layout_height="2dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:background="@color/color_of_cccccc"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@id/tv_index_1"
+            app:layout_constraintEnd_toEndOf="@id/tv_index_3"
+            app:layout_constraintStart_toStartOf="@id/tv_index_2"
+            app:layout_constraintTop_toTopOf="@id/tv_index_1" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <FrameLayout
