--- a/app/src/main/res/layout/fragment_attestation_carrier_personal.xml
+++ b/app/src/main/res/layout/fragment_attestation_carrier_personal.xml
@@ -41,8 +41,8 @@
                 android:id="@+id/item_road_transport_permit"
                 style="@style/item_edit"
                 app:centerType="normal"
-                app:textcenterhide="请输入挂靠公司的道路运输许可证编号"
-                app:textleft="挂靠公司的道路运输许可证编号" />
+                app:textcenterhide="请输入道路运输许可证编号"
+                app:textleft="道路运输许可证编号" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -87,5 +87,5 @@
     <TextView
         android:id="@+id/bt_sum"
         style="@style/bt_red"
-        android:text="下一步" />
+        android:text="提交" />
 </LinearLayout>
