--- a/companylibrary/src/main/res/values/attrs.xml
+++ b/companylibrary/src/main/res/values/attrs.xml
@@ -19,6 +19,7 @@
         <attr name="srcLeft" format="reference" />
         <attr name="srcRight" format="reference" />
         <attr name="srcRightSize" format="dimension" />
+        <attr name="srcLeftSize" format="dimension" />
         <attr name="srcshow" format="boolean" />
         <attr name="srcLeftshow" format="enum" >
             <enum name="show" value="2" />
