--- a/app/src/main/res/layout/activity_order_create.xml
+++ b/app/src/main/res/layout/activity_order_create.xml
@@ -201,6 +201,7 @@
                     style="@style/item_edit"
                     app:textcenterhide="请输入货物名称"
                     app:textleft="货物名称" />
+
                 <com.fy.companylibrary.widget.ItemTextView
                     android:id="@+id/item_cargo_type"
                     style="@style/item_text"
@@ -227,6 +228,58 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:background="@drawable/ovl_5_ffffff"
+                android:orientation="vertical"
+                android:paddingTop="@dimen/gap_app"
+                android:paddingBottom="@dimen/gap_app">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="选填项"
+                    android:layout_marginLeft="15dp"
+                    android:textSize="15dp"
+                    android:layout_marginBottom="15dp"
+                    android:textColor="@color/color_of_040000" />
+                <View
+                    android:layout_width="match_parent"
+                    android:background="@color/line_color"
+                    android:layout_marginLeft="@dimen/gap_app"
+                    android:layout_height="@dimen/line_height"/>
+
+
+                <com.fy.companylibrary.widget.ItemTextView
+                    style="@style/item_text"
+                    android:id="@+id/item_owner"
+                    app:centerType="number"
+                    app:showline="true"
+                    app:srcLeftshow="show"
+                    app:srcLeftSize="24dp"
+                    app:srcLeft="@mipmap/ic_launcher"
+                    app:textcenterhide="请选择实际承运人（运费收款人）"
+                    app:textleft="" />
+
+
+
+                <com.fy.companylibrary.widget.ItemTextView
+                    style="@style/item_text"
+                    app:showline="false"
+                    app:srcLeftshow="show"
+                    app:srcLeftSize="24dp"
+                    app:srcLeft="@mipmap/ic_launcher"
+                    android:id="@+id/item_driver"
+                    app:textcenterhide="请选择司机（驾驶员）"
+                    app:textleft="" />
+
+
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
 
                 android:layout_margin="10dp"
                 android:background="@drawable/ovl_5_ffffff"
@@ -247,7 +300,7 @@
                     style="@style/item_text"
                     app:showline="false"
                     app:textcenterhide="请选择支付类型"
-                    app:textleft="支付类型" />
+                    app:textleft="" />
             </LinearLayout>
 
             <LinearLayout
@@ -343,15 +396,15 @@
                     app:textleft="被保险人" />
 
 
-                    <TextView
-                        android:id="@+id/tv_agreement_insurance"
-                        android:layout_width="match_parent"
-                        android:background="@drawable/ovl_5_ffffff"
-                        android:padding="@dimen/gap_app"
-                        android:layout_height="wrap_content"
-                        android:text="《保险条款》"
-                        android:textColor="@color/color_of_999999"
-                        android:textSize="12dp" />
+                <TextView
+                    android:id="@+id/tv_agreement_insurance"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/ovl_5_ffffff"
+                    android:padding="@dimen/gap_app"
+                    android:text="《保险条款》"
+                    android:textColor="@color/color_of_999999"
+                    android:textSize="12dp" />
 
             </LinearLayout>
         </LinearLayout>
