--- a/companylibrary/src/main/res/values/colors.xml
+++ b/companylibrary/src/main/res/values/colors.xml
@@ -11,6 +11,8 @@
     <color name="color_of_a1a1a1">#A1A1A1</color>
     <color name="color_of_aaabaf">#AAABAF</color>
     <color name="color_of_3d3d3d">#3d3d3d</color>
+    <color name="color_of_dceeea">#dceeea</color>
+    <color name="color_of_43bfa3">#43BFA3</color>
     <color name="color_of_d9d9d9">#d9d9d9</color>
     <color name="color_of_be8c46">#BE8C46</color>
     <color name="color_of_999999">#999999</color>
