--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -125,7 +125,7 @@
                         android:text="账户余额(元)"
                         android:textColor="@color/color_of_999999"
                         android:textSize="12dp"
-                        app:layout_constraintEnd_toStartOf="@id/icon_eyes"
+                        app:layout_constraintEnd_toStartOf="@id/guide"
                         app:layout_constraintStart_toEndOf="@id/view_line"
                         app:layout_constraintTop_toTopOf="@id/view_line" />
 
@@ -138,7 +138,7 @@
                         android:textColor="@color/color_of_040000"
                         android:textSize="24dp"
                         android:textStyle="bold"
-                        app:layout_constraintEnd_toStartOf="@id/icon_eyes"
+                        app:layout_constraintEnd_toStartOf="@id/guide"
                         app:layout_constraintStart_toEndOf="@id/view_line"
                         app:layout_constraintTop_toBottomOf="@id/tv_count_des" />
 
@@ -153,6 +153,63 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
+
+
+                    <Space
+                        android:id="@+id/guide"
+                        android:layout_width="1dp"
+                        android:layout_height="0dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toStartOf="@id/icon_eyes"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/tv_company"
+                        android:layout_width="33dp"
+                        android:layout_height="wrap_content"
+                        android:text="企业金库"
+                        android:textColor="@color/color_of_040000"
+                        android:textSize="16dp"
+                        android:textStyle="bold"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="@id/guide"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <View
+                        android:id="@+id/view_line_company"
+                        android:layout_width="@dimen/line_height"
+                        android:layout_height="0dp"
+                        android:layout_marginLeft="15dp"
+                        android:background="@color/line_color"
+                        app:layout_constraintBottom_toBottomOf="@id/tv_company"
+                        app:layout_constraintStart_toEndOf="@id/tv_company"
+                        app:layout_constraintTop_toTopOf="@id/tv_company" />
+
+                    <TextView
+                        android:id="@+id/tv_count_company_des"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="15dp"
+                        android:text="账户余额(元)"
+                        android:textColor="@color/color_of_999999"
+                        android:textSize="12dp"
+                        app:layout_constraintEnd_toStartOf="@id/icon_eyes"
+                        app:layout_constraintStart_toEndOf="@id/view_line_company"
+                        app:layout_constraintTop_toTopOf="@id/view_line_company" />
+
+                    <TextView
+                        android:id="@+id/tv_count_company"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="15dp"
+                        android:text="******"
+                        android:textColor="@color/color_of_040000"
+                        android:textSize="24dp"
+                        android:textStyle="bold"
+                        app:layout_constraintEnd_toStartOf="@id/icon_eyes"
+                        app:layout_constraintStart_toEndOf="@id/view_line_company"
+                        app:layout_constraintTop_toBottomOf="@id/tv_count_company_des" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
