--- a/app/src/main/res/layout/fragment_person_center.xml
+++ b/app/src/main/res/layout/fragment_person_center.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tool="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_of_ffffff"
@@ -28,7 +28,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/color_of_040000"
                 android:textSize="26dp"
-                tool:text="15555555555" />
+                tools:text="15555555555" />
 
             <TextView
                 android:id="@+id/tv_role"
@@ -42,7 +42,7 @@
                 android:paddingBottom="3dp"
                 android:textColor="@color/color_of_ffffff"
                 android:textSize="12dp"
-                tool:text="司机" />
+                tools:text="司机" />
         </LinearLayout>
 
         <com.fy.androidlibrary.widget.CircularImageView
@@ -76,9 +76,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginRight="10dp"
-                android:layout_marginBottom="15dp"
                 app:hl_cornerRadius="5dp"
                 app:hl_shadowBackColor="@color/color_of_ffffff"
                 app:hl_shadowColor="#2a000000"
@@ -124,12 +123,80 @@
                         android:text="账户余额(元)"
                         android:textColor="@color/color_of_999999"
                         android:textSize="12dp"
-                        app:layout_constraintEnd_toStartOf="@id/icon_eyes"
+                        app:layout_constraintEnd_toStartOf="@id/guide"
                         app:layout_constraintStart_toEndOf="@id/view_line"
                         app:layout_constraintTop_toTopOf="@id/view_line" />
 
                     <TextView
                         android:id="@+id/tv_count"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="******"
+                        android:textColor="@color/color_of_040000"
+                        android:textSize="24dp"
+                        android:textStyle="bold"
+                        app:layout_constraintStart_toStartOf="@id/tv_count_des"
+                        app:layout_constraintEnd_toEndOf="@id/tv_count_des"
+                        app:layout_constraintTop_toBottomOf="@id/tv_count_des" />
+
+                    <ImageView
+                        android:id="@+id/icon_eyes"
+                        android:layout_width="37dp"
+                        android:layout_height="57dp"
+                        android:paddingLeft="20dp"
+                        android:paddingTop="20dp"
+                        android:paddingBottom="20dp"
+                        android:src="@mipmap/attention_forbid"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+
+                    <Space
+                        android:id="@+id/guide"
+                        android:layout_width="1dp"
+                        android:layout_height="0dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toStartOf="@id/icon_eyes"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/tv_company"
+                        android:layout_width="33dp"
+                        android:layout_height="wrap_content"
+                        android:text="企业金库"
+                        android:textColor="@color/color_of_040000"
+                        android:textSize="16dp"
+                        android:textStyle="bold"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="@id/guide"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <View
+                        android:id="@+id/view_line_company"
+                        android:layout_width="@dimen/line_height"
+                        android:layout_height="0dp"
+                        android:layout_marginLeft="15dp"
+                        android:background="@color/line_color"
+                        app:layout_constraintBottom_toBottomOf="@id/tv_company"
+                        app:layout_constraintStart_toEndOf="@id/tv_company"
+                        app:layout_constraintTop_toTopOf="@id/tv_company" />
+
+                    <TextView
+                        android:id="@+id/tv_count_company_des"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="15dp"
+                        android:text="账户余额(元)"
+                        android:textColor="@color/color_of_999999"
+                        android:textSize="12dp"
+                        app:layout_constraintEnd_toStartOf="@id/icon_eyes"
+                        app:layout_constraintStart_toEndOf="@id/view_line_company"
+                        app:layout_constraintTop_toTopOf="@id/view_line_company" />
+
+                    <TextView
+                        android:id="@+id/tv_count_company"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="15dp"
@@ -138,20 +205,16 @@
                         android:textSize="24dp"
                         android:textStyle="bold"
                         app:layout_constraintEnd_toStartOf="@id/icon_eyes"
-                        app:layout_constraintStart_toEndOf="@id/view_line"
-                        app:layout_constraintTop_toBottomOf="@id/tv_count_des" />
+                        app:layout_constraintStart_toEndOf="@id/view_line_company"
+                        app:layout_constraintTop_toBottomOf="@id/tv_count_company_des" />
 
-                    <ImageView
-                        android:id="@+id/icon_eyes"
-                        android:paddingTop="20dp"
-                        android:paddingLeft="20dp"
-                        android:paddingBottom="20dp"
-                        android:layout_width="37dp"
-                        android:layout_height="57dp"
-                        android:src="@mipmap/attention_forbid"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                    <androidx.constraintlayout.widget.Group
+                        android:layout_width="wrap_content"
+                        android:id="@+id/group_company"
+                        android:visibility="gone"
+                        tools:visibility="visible"
+                        app:constraint_referenced_ids="tv_company,tv_count_company,tv_count_company_des,view_line_company"
+                        android:layout_height="wrap_content"/>
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </com.fy.androidlibrary.widget.shadow.ShadowLayout>
