--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,6 +9,7 @@
     tools:context=".ui.LoginActivity">
 
     <TextView
+        android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
@@ -32,8 +33,8 @@
             android:background="@color/color_of_tran"
             android:digits="1234567890"
             android:hint="请输入手机号"
-            android:maxLength="11"
             android:inputType="phone"
+            android:maxLength="11"
             android:maxLines="1"
             android:paddingBottom="14dp"
             android:textColor="@color/color_of_040000"
@@ -60,8 +61,8 @@
         android:layout_height="wrap_content"
         android:background="@color/color_of_tran"
         android:digits="1234567890"
-        android:inputType="phone"
         android:hint="请输入验证码"
+        android:inputType="phone"
         android:maxLength="6"
         android:maxLines="1"
         android:paddingTop="14dp"
@@ -73,24 +74,62 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/line_height"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="10dp"
         android:background="@color/line_color" />
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_switch_login_way"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="账号密码登录"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:textColor="@color/color_of_3d5688"
+            android:textSize="14dp" />
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/tv_forget_password"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="忘记密码"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:textColor="@color/color_of_666666"
+            android:textSize="14dp" />
+
+    </LinearLayout>
+
 
     <TextView
         android:id="@+id/bt_sum"
         style="@style/bt_red"
-        android:text="登录"
-        android:layout_margin="0dp" />
+        android:layout_margin="0dp"
+        android:text="登录" />
+
     <View
         android:layout_width="wrap_content"
-        android:layout_weight="1"
-        android:layout_height="0dp"/>
-   <TextView
-       android:layout_width="match_parent"
-       android:id="@+id/tv_argument"
-       android:text="进入木牛流马代表你已同意"
-       android:textSize="12dp"
-       android:gravity="center"
-       android:textColor="@color/color_of_040000"
-       android:layout_height="wrap_content"/>
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+    <TextView
+        android:id="@+id/tv_argument"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="进入木牛流马代表你已同意"
+        android:textColor="@color/color_of_040000"
+        android:textSize="12dp" />
 </LinearLayout>
