--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -111,7 +111,7 @@
                         android:id="@+id/view_line"
                         android:layout_width="@dimen/line_height"
                         android:layout_height="0dp"
-                        android:layout_marginLeft="15dp"
+                        android:layout_marginLeft="7dp"
                         android:background="@color/line_color"
                         app:layout_constraintBottom_toBottomOf="@id/tv1"
                         app:layout_constraintStart_toEndOf="@id/tv1"
@@ -121,7 +121,8 @@
                         android:id="@+id/tv_count_des"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="15dp"
+                        android:layout_marginLeft="7dp"
+                        android:layout_marginRight="10dp"
                         android:text="账户余额(元)"
                         android:textColor="@color/color_of_999999"
                         android:textSize="12dp"
@@ -166,20 +167,21 @@
                     <TextView
                         android:id="@+id/tv_company"
                         android:layout_width="33dp"
+                        android:layout_marginLeft="10dp"
                         android:layout_height="wrap_content"
                         android:text="企业金库"
                         android:textColor="@color/color_of_040000"
                         android:textSize="16dp"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="@id/guide"
+                        app:layout_constraintStart_toEndOf="@id/guide"
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <View
                         android:id="@+id/view_line_company"
                         android:layout_width="@dimen/line_height"
                         android:layout_height="0dp"
-                        android:layout_marginLeft="15dp"
+                        android:layout_marginLeft="7dp"
                         android:background="@color/line_color"
                         app:layout_constraintBottom_toBottomOf="@id/tv_company"
                         app:layout_constraintStart_toEndOf="@id/tv_company"
@@ -189,7 +191,7 @@
                         android:id="@+id/tv_count_company_des"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="15dp"
+                        android:layout_marginLeft="7dp"
                         android:text="账户余额(元)"
                         android:textColor="@color/color_of_999999"
                         android:textSize="12dp"
@@ -201,13 +203,12 @@
                         android:id="@+id/tv_count_company"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="15dp"
                         android:text="******"
                         android:textColor="@color/color_of_040000"
                         android:textSize="24dp"
                         android:textStyle="bold"
-                        app:layout_constraintEnd_toStartOf="@id/icon_eyes"
-                        app:layout_constraintStart_toEndOf="@id/view_line_company"
+                        app:layout_constraintEnd_toEndOf="@id/tv_count_company_des"
+                        app:layout_constraintStart_toStartOf="@id/tv_count_company_des"
                         app:layout_constraintTop_toBottomOf="@id/tv_count_company_des" />
 
                     <androidx.constraintlayout.widget.Group
