--- a/app/src/main/res/layout/mnlm_activity_app_policy.xml
+++ b/app/src/main/res/layout/mnlm_activity_app_policy.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:background="@color/color_of_ffffff"
     android:gravity="center_horizontal"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
 
     <include layout="@layout/toolbar" />
 
@@ -45,15 +46,16 @@
         style="@style/item_text"
         app:centerType="number"
         app:editable="true"
+        app:colorRight="@color/color_of_ff3a30"
         app:srcRight="@null"
         app:textcenterhide="请填写货物价值"
         app:textleft="货物价值" />
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="center_vertical">
 
         <ImageView
@@ -61,8 +63,8 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:paddingLeft="10dp"
-            android:paddingTop="10dp"
             android:paddingRight="10dp"
+            android:paddingTop="10dp"
             android:paddingBottom="10dp"
             android:src="@mipmap/icon_wxz_36" />
 
